--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: 有质量的新应用
 ---
 <div class='cover-page'>
     <div class='blog-icon'>
-        <h1>&#x23;</h1>
+        <img src="/images/chaoqichaoluo-logo.png" alt="">
     </div>
 </div>
 
