--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: 有质量的新应用
 	{% for post in paginator.posts %}
 		<h5 class='post-date'>{{ post.date |  date: "%d %B %Y"}}</h5>
 	    <h3 class='post-title'>
-        <span><img src="{{ post.results.first.artworkUrl60 }}" alt=""></span>&nbsp;<a href="{{ post.url }}">{{ post.title }}：{{ post.description }}</a>
+        <span><img src="{{ post.results.first.artworkUrl60 }}" alt=""></span>&nbsp;&nbsp;<a href="{{ post.url }}">{{ post.title }}：{{ post.description }}</a>
 	    </h3>  
 	{% endfor %}
 </div>
@@ -28,18 +28,18 @@ description: 有质量的新应用
     <ul class="pages">
     <li class="page">
       {% if paginator.page == 1 %}
-        <span class="current-page">1</span>&nbsp;
+        <span class="current-page">1</span>&nbsp;&nbsp;
       {% else %}
-        <a href="/">1</a>&nbsp;
+        <a href="/">1</a>&nbsp;&nbsp;
       {% endif %}
     </li>
 
     {% for count in (2..paginator.total_pages) %}
       <li class="page">
         {% if count == paginator.page %}
-        ・&nbsp;<span class="current-page">{{count}}</span>
+        ・&nbsp;&nbsp;<span class="current-page">{{count}}</span>
         {% else %}
-        ・&nbsp;<a href="/page{{ count }}">{{count}}</a>
+        ・&nbsp;&nbsp;<a href="/page{{ count }}">{{count}}</a>
         {% endif %}
       </li>
     {% endfor %}
