--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: 有质量的新应用
 	{% for post in paginator.posts %}
 		<h5 class='post-date'>{{ post.date |  date: "%d %B %Y"}}</h5>
 	    <h3 class='post-title'>
-        <span><img src="{{ post.results.first.artworkUrl60 }}"width="20px" alt=""></span>&nbsp;&nbsp;<a href="{{ post.url }}">{{ post.title }}：{{ post.description }}</a>
+        <img src="{{ post.results.first.artworkUrl60 }}" alt="">&nbsp;&nbsp;<a href="{{ post.url }}">{{ post.title }}<span style="font-weight: 400;">: {{ post.description }}</span></a>
 	    </h3>  
 	{% endfor %}
 </div>
