--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ description: 有质量的新应用
 
 		<p>在这里你可以找到不会次次崩溃的、界面大概看得过去的、操作上不会让你怀疑自己智商的、收费不算太隐蔽的、与别人谈论起来能透出点品味的应用。我们会在新发布的应用中按照这些标准挑选，不敢叫精选，恐遭后人耻笑。</p>
 
-		<p>2016.4 更新：一年之间，一些上榜的 app 已经下载不了了，可怜了那些产品、运营和码农。</p>
+		<p>2016.4 更新：一些之前上榜的 app 已经下载不了了，可怜了那些产品、运营和码农。</p>
 
 		<p>如果下面的留言板能正常显示出来，你不来一发么？</p>
 		<!-- <p>If you would like to contact him, just <a href="mailto:sumit@linweb.tk" style="border-bottom:2px #1F87FF solid;">mail him</a> or PM him on <a href="https://facebook.com/SuMiTDuRdEn" style="border-bottom:2px #1F87FF solid;">Facebook</a>.</p> -->
